HEAD
	+ Moved EBox::SquidFirewall to EBox::Squid::Firewall
	+ Fixed squid basic authentication to support multi-OU
3.2
	+ Set version to 3.2
3.1.7
	+ Include domains with final slash as filtered when required
	+ Ignore 407 requests when auth is required in log helper
3.1.6
	+ Override daemons when migrating from 3.0
	+ Disable load_url_list by default to reduce CPU and memory usage
3.1.5
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
3.1.4
	+ Fixed regression on Delay Pools table triggered by changes in updatedRowNotify
3.1.3
	+ Mark logs as changed when an access rule is added, updated or deleted
	+ Fix duplicated entries generated by the LogHelper
	+ Prerouting rules have no iaccept chain, use ACCEPT target
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Fix parse of the dansguardian log in the LogHelper
	+ Make LogHelper extract data from internal and external log files
	+ Adapt firewall rules to new accept chains
	+ Show correct group names in the Access Rules menu when using Users Group
	+ Handle domains that are actually IP addresses in the LogHelper
	+ Set transparent HTTP proxy firewall rules unless the module is
	  temporary stopped
	+ Added support for multiple Organizational Units
	+ Updated to use the new security group concept
	+ Adapted squid to new user module interface for external AD authorization
3.1.2
	+ Use external squid log file to retrieve HTTP proxy requests
	+ Added Auth and Cache Exceptions for non-transparent mode
	  which allow to bypass Squid + Dansguardian auth
	+ Added CUPS and ftp to SSL_ports
	+ Avoid warning in AccessRules validateTypedRow
3.1.1
	+ Squid time ACLs have independient ids, this fixes several issues
	  with combinations of time, dates and long acls
	+ Do not repeat Squid ACL declarations
	+ Changed HTTP keytab permission in order to avoid krb5_kt_add_entry errors
3.1
	+ Removed 3.0.X migration code