@@ -1,4 +1,5 @@
 HEAD
+	+ Transparent proxy redirection for openvpn servers' clients
 	+ Moved EBox::SquidFirewall to EBox::Squid::Firewall
 	+ Fixed squid basic authentication to support multi-OU
 3.2
